--- a/data/bn/sections/about.yaml
+++ b/data/bn/sections/about.yaml
@@ -8,10 +8,10 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: Data Analyst
 # your company information
 company:
-  name: Example Co.
+  name: Blue Cross and Blue Shield of Alabama
   url: "https://www.example.com"
 
 
