--- a/data/en/sections/recent-posts.yaml
+++ b/data/en/sections/recent-posts.yaml
@@ -2,7 +2,7 @@
 section:
   name: Recent Posts
   id: recent-posts
-  enable: true
+  enable: false #boolean that let's you show/hide this section
   weight: 8
   showOnNavbar: true
   # Can optionally hide the title in sections
