--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://hugo-toha.github.io
+baseURL: https://carlosondevops.github.io/jointhequery.github.io/ #https://hugo-toha.github.io
 
 languageCode: bn
 title: "Join the Query"
